--- a/04 - flex-box/nested-flex/css/style.css
+++ b/04 - flex-box/nested-flex/css/style.css
@@ -1,24 +1,21 @@
-
 div{
     border: 2px solid violet;
     box-sizing: border-box;
 }
-
 .yellow{
     background-color: lightyellow;
     padding: 1rem;
-
+    gap: 1rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
 }
 .violet{
     background-color: rgb(244, 188, 244);
-    flex-basis: 43%;
+    flex-basis: 50%;
     padding: 1rem;
     height: 9rem;
 }
-
 .container{
     display: flex;
     flex-flow: column nowrap;
